# gem

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: capsule.h  cylinder.h  line.h  matrix.h  plane.h  quaternion.h  range.h  ray.h  sphere.h  transform.h  vector.h
include/common/: defines.h
unit_tests/: CMakeLists.txt  main.cpp
